Fix scrollbar position

--- a/css/popup.css
+++ b/css/popup.css
@@ -51,6 +51,7 @@ body{
   padding-bottom:5px;
   padding-left:3px;
   left:4px;
+  padding-right:10px;
   overflow-y:scroll;
 }
 .icon{
